[DDW-926] Fix 'Filter' button truncation

--- a/source/renderer/app/components/wallet/transactions/render-strategies/SimpleTransactionList.scss
+++ b/source/renderer/app/components/wallet/transactions/render-strategies/SimpleTransactionList.scss
@@ -1,4 +1,3 @@
 .component {
-  overflow: auto;
-  padding-top: 8px;
+  padding-right: 20px;
 }
